# NeuraFlux

./: .gitignore  Dockerfile  Makefile  README.md  config.json  config_caiso.json  config_double.json  main.py  pyproject.toml  tf_lite_test.py
.github/workflows/: ci-pipeline.yml
neuraflux/: geography.py  global_variables.py  local_typing.py  logging_utils.py  simulation.py  time_ref.py  utils_hdf5.py  utils_sql.py  weather.py
neuraflux/agency/: agent.py  control_module.py  control_utils.py  data_module.py  ddqn.py  module.py  policies.py  products.py  replay_buffer.py  rl_training.py  scaling_utils.py  tariffs.py  time_features.py
neuraflux/assets/: base_asset.py  building.py  electric_vehicle.py  energy_storage.py
neuraflux/schemas/: agency.py  asset_config.py  control.py  simulation.py
neuraview/: 10_debugging_and_logging.py  1_agent_profile.py  2_decision_engine.py  3_grid_and_power_flow.py  4_learning_and_evolution.py  5_multiagent_and_aggregation.py  6_performance_and_profitability.py  7_health_and_integrity.py  8_simulation_manager.py  9_simulation_config.py  agent_utils.py  data_utils.py  global_variables.py  main.py  plot_utils.py  rl_training.py  sidebar_utils.py
templates/: config_building.json  config_generator.py  default_values.py
tests/: test_data_module.py  test_time_ref.py  test_utils_SQL.py  test_utils_hdf5.py  test_weather.py
tests/assets/: test_building.py  test_electric_vehicle.py  test_energy_storage.py
