[tool.poetry]
name = "neuraflux"
version = "2.0.0"
description = "Agency intelligence for distributed energy resources."
authors = ["Ysael Desage <ysael.desage@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.0.3"
pandas = "^2.0.3"
ruff = "^0.3.4"
pytest = "^8.1.1"
bandit = "^1.7.8"
h5py = "^3.11.0"
dill = "^0.3.8"
meteostat = "^1.6.7"
streamlit = "^1.36.0"
watchdog = "^4.0.1"
tensorflow = "2.15"
plotly = "^5.22.0"
joypy = "^0.2.6"
pypsa = "^0.29.0"
matplotlib = "^3.9.1"
graphviz = "^0.20.3"
igraph = "^0.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"